fix logo size on mobile

--- a/sass/soon.scss
+++ b/sass/soon.scss
@@ -176,6 +176,8 @@ header {
                 width: 188px;
                 height: 156px;
                 @include img-retina("../images/splash-logo.png", "../images/splash-logo@2x.png", 188px, 156px);
+                background-size: 188px;
+              height: 156px;
             }
         }
         h2 {
